fix line spacing in <li> items

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body {
 }
 
 li:not(:last-child) {
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 400; }
@@ -151,7 +151,7 @@ a:visited { color: #205caa; }
 
 .posts { list-style-type: none; }
 
-.posts li { margin-bottom: 30px; }
+.posts li { margin-bottom: 20px; }
 
 .posts .post-link {
   font-size: 20px;
